# sum-it-up-agent

./: .env.example  .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-NONCOMMERSIAL  README.md  architecture.md  pyproject.toml  run_app.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  issues.yml  release.yml
ADR/: mcp-first-microservices-architecture.md  observability-and-monitoring.md  store-prompts-as-versioned-text-files.md
docs/: ISSUE_IDEAS.md
examples/: agent_example.py  audio_processing_examples.py  mcp_audio_testing.ipynb  prompt_parser_example.py
src/audio_processor/: README_AUDIO_PROCESSOR.md  __init__.py  audio_processor.py  mcp_server_audio.py  use_cases.py
src/communicator/: factory.py  interfaces.py
src/sum_it_up_agent/: __init__.py  __main__.py  app.py
src/sum_it_up_agent/agent/: README.md  __init__.py  logger.py  models.py  orchestrator.py  prompt_parser.py
src/sum_it_up_agent/audio_processor/: README_AUDIO_PROCESSOR.md  __init__.py  audio_processor.py  factory.py  interfaces.py  mcp_server_audio.py  use_cases.py
src/sum_it_up_agent/communicator/: __init__.py  email_communicator.py  factory.py  mcp_communicator.py  models.py  pdf_exporter.py  slack_communicator.py
src/sum_it_up_agent/observability/: __init__.py  logger.py
src/sum_it_up_agent/summarizer/: README_SUMMARIZER.md  __init__.py  factory.py  interfaces.py  mcp_summarizer.py  summarizer.py  use_cases.py
src/sum_it_up_agent/templates/: __init__.py  prompts.py
src/sum_it_up_agent/topic_classification/: README_TOPIC_CLASSIFICATION.md  __init__.py  factory.py  interfaces.py  mcp_topic_classification.py  topic_classifier.py  use_cases.py
src/summarizer/: README_SUMMARIZER.md  factory.py  interfaces.py  mcp_summarizer.py  summarizer.py  use_cases.py
src/templates/: prompts.py
src/topic_classification/: README_TOPIC_CLASSIFICATION.md  __init__.py  mcp_topic_classification.py  use_cases.py
tests/: test_data.py  test_prompt_parser_eval.py
tests/evaluation_framework/: README-mlflow-eval.md  example_mlflow_usage.py  mlflow_prompt_eval.py  requirements-mlflow.txt
tests/examples/: communicator_email_tester.py  summarizer_examples.py  topic_classification_examples.py
tests/examples/ollama_summaries/: 996_transcription.json  996_transcription_summary.json  996_transcription_topic_classification.json  System-design_transcription.json  System-design_transcription_summary.json  System-design_transcription_topic_classification.json  buffet_speech_transcription.json  rec_ios_transcription.json  rec_ios_transcription_summary.json  rec_ios_transcription_topic_classification.json
tests/examples/output/: Product_Marketing_transcription.json
tests/unittests/: test_data.py  test_prompt_parser_eval.py  test_utils.py
(+21 files in other folders)
