[tool.poetry]
name = "sum-it-up-agent"
version = "0.1.0"
description = ""
authors = ["vios <billiosifidis@gmail.com>"]
readme = "README.md"
packages = [{include = "sum_it_up_agent", from = "src"}]
include = [
    "src/sum_it_up_agent/templates/prompt_files/**/*.txt",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = {url = "https://download.pytorch.org/whl/cu128/torch-2.9.0%2Bcu128-cp311-cp311-manylinux_2_28_x86_64.whl"}
torchvision = "*"
transformers = "4.57.6"
huggingface_hub = ">=0.34.0"
ipykernel = ">=7.1.0"
pyannote-audio = ">=3.1"
torchcodec = "0.9"
pydub = "0.25.1"
ipywidgets = "8.1.8"
faster-whisper = "1.2.1"
fastmcp = ">=3.0.0b2"
markdown = "3.10.1"
weasyprint = ">=68.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "deptry (>=0.24.0,<0.25.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]
